src/test/resources/etapa4/failing/wrongExpBin.ru
/? chequea que la expresión binaria sea semánticamente correcta.

struct A{
}

impl A {
    .(){}
    fn met1(Int a) -> Int {
        Str b;
        a = 1 + b;
    }
}


start {
}